# ent/http/request.go
@@ -1,101 +1,0 @@
-// Code generated by ent, DO NOT EDIT.
-
-package http
-
-import (
-	"time"
-)
-
-// Payload of a ent.Battle create request.
-type BattleCreateRequest struct {
-	Result    *string    `json:"result"`
-	CreatedAt *time.Time `json:"created_at"`
-	UpdatedAt *time.Time `json:"updated_at"`
-	Contender *int       `json:"contender"`
-	Oponent   *int       `json:"oponent"`
-}
-
-// Payload of a ent.Battle update request.
-type BattleUpdateRequest struct {
-	Result    *string    `json:"result"`
-	UpdatedAt *time.Time `json:"updated_at"`
-	Contender *int       `json:"contender"`
-	Oponent   *int       `json:"oponent"`
-}
-
-// Payload of a ent.Car create request.
-type CarCreateRequest struct {
-	Model        *string    `json:"model"`
-	RegisteredAt *time.Time `json:"registered_at"`
-	Cars         []int      `json:"cars"`
-}
-
-// Payload of a ent.Car update request.
-type CarUpdateRequest struct {
-	Model        *string    `json:"model"`
-	RegisteredAt *time.Time `json:"registered_at"`
-	Cars         []int      `json:"cars"`
-}
-
-// Payload of a ent.Group create request.
-type GroupCreateRequest struct {
-	Name  *string `json:"name"`
-	Users []int   `json:"users"`
-}
-
-// Payload of a ent.Group update request.
-type GroupUpdateRequest struct {
-	Name  *string `json:"name"`
-	Users []int   `json:"users"`
-}
-
-// Payload of a ent.Pet create request.
-type PetCreateRequest struct {
-	Name *string `json:"name"`
-	Age  *int    `json:"age"`
-}
-
-// Payload of a ent.Pet update request.
-type PetUpdateRequest struct {
-	Name *string `json:"name"`
-	Age  *int    `json:"age"`
-}
-
-// Payload of a ent.Pokemon create request.
-type PokemonCreateRequest struct {
-	Name        *string    `json:"name"`
-	Description *string    `json:"description"`
-	Weight      *float64   `json:"weight"`
-	Height      *float64   `json:"height"`
-	CreatedAt   *time.Time `json:"created_at"`
-	UpdatedAt   *time.Time `json:"updated_at"`
-	Fights      []int      `json:"fights"`
-	Opponents   []int      `json:"opponents"`
-}
-
-// Payload of a ent.Pokemon update request.
-type PokemonUpdateRequest struct {
-	Name        *string    `json:"name"`
-	Description *string    `json:"description"`
-	Weight      *float64   `json:"weight"`
-	Height      *float64   `json:"height"`
-	UpdatedAt   *time.Time `json:"updated_at"`
-	Fights      []int      `json:"fights"`
-	Opponents   []int      `json:"opponents"`
-}
-
-// Payload of a ent.User create request.
-type UserCreateRequest struct {
-	Age    *int    `json:"age"`
-	Name   *string `json:"name"`
-	Cars   []int   `json:"cars"`
-	Groups []int   `json:"groups"`
-}
-
-// Payload of a ent.User update request.
-type UserUpdateRequest struct {
-	Age    *int    `json:"age"`
-	Name   *string `json:"name"`
-	Cars   []int   `json:"cars"`
-	Groups []int   `json:"groups"`
-}
